[RLS] Use correct ScrollableArea in InspectorLayerTreeAgent

Scrolling Layer will be present in PLSA when RLS is enabled

TEST=http/tests/devtools/layers no longer crashes

Bug: 766497
Change-Id: Ie893969b482266f4da01e6171c1daf2a9b3386a2
Reviewed-on: https://chromium-review.googlesource.com/697191
Commit-Queue: srirama chandra sekhar <srirama.m@samsung.com>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506356}
Former-commit-id: cbf967918e6fda42e92613544742d27d69b88c05